# araucaria_plugins

./: Cargo.toml  README.md
src/: deserialize.rs  lib.rs  locale.rs  serialize.rs  stub.rs
src/deserialize/: from_json.rs  mod.rs  value_from_json.rs  value_from_json_and_schema.rs
src/serialize/: error.rs  locale.rs  mod.rs  operation.rs  schema.rs  validation.rs  value.rs
src/utils/: date.rs  date_time.rs  email.rs  mod.rs  string.rs  time.rs
src/validate/: bool.rs  date.rs  date_time.rs  datetime.rs  email.rs  mod.rs  num_f.rs  num_i.rs  num_u.rs  str.rs  time.rs  validate_bool.rs  validate_date.rs  validate_date_time.rs  validate_email.rs  validate_enum.rs  validate_f64.rs  validate_i64.rs  validate_isize.rs  validate_str.rs  validate_time.rs  validate_u64.rs  validate_usize.rs
src/validate/enforce_optional/: mod.rs  validate_bool.rs  validate_date.rs  validate_date_time.rs  validate_email.rs  validate_enum.rs  validate_f64.rs  validate_i64.rs  validate_isize.rs  validate_str.rs  validate_time.rs  validate_u64.rs  validate_usize.rs
src/validate/enforce_required/: mod.rs  validate_bool.rs  validate_date.rs  validate_date_time.rs  validate_email.rs  validate_enum.rs  validate_f64.rs  validate_i64.rs  validate_isize.rs  validate_str.rs  validate_time.rs  validate_u64.rs  validate_usize.rs
