[package]
name = "araucaria_plugins"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["João Arthur <joaoarthurlf.dev@gmail.com>"]

[lib]
crate-type = ["rlib"]

[features]

[dependencies]
araucaria = { git = "https://github.com/joao-arthur/araucaria", rev = "16c95329da335cc09c037e4d73ee477aa1bb6f7c" }
email_address = "0.2.9"
unicode-segmentation = "1.12.0"
regex = "1.11.1"
serde_json = "1.0.140"
serde = "1.0.219"
chrono = "0.4.40"
unicode-normalization = "0.1.24"

[dev-dependencies]
rocket = { version = "0.5.1", features = ["json"] }
