[package]
name = "araucaria_plugins"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["João Arthur <joaoarthurlf.dev@gmail.com>"]

[lib]
crate-type = ["rlib"]

[features]

[dependencies]
araucaria = { git = "https://github.com/joao-arthur/araucaria", rev = "412a260b182232be3d373f42cb079bff84e5e199" }
email_address = "0.2.9"
unicode-segmentation = "1.12.0"
regex = "1.11.1"
serde_json = "1.0.140"
serde = "1.0.219"
chrono = "0.4.40"
unicode-normalization = "0.1.24"
