[package]
name = "araucaria_plugins"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["João Arthur <joaoarthurlf.dev@gmail.com>"]

[lib]
crate-type = ["rlib"]

[features]

[dependencies]
araucaria = { git = "https://github.com/joao-arthur/araucaria", rev = "e32a8774832a90e8014469dd26c986c0f883c7d2" }
email_address = "0.2.9"
unicode-segmentation = "1.12.0"
regex = "1.11.2"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.42"
unicode-normalization = "0.1.24"
